# sora-on-rust

./: .gitignore  Cargo.toml  Config.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
src/: client.rs  config.rs  handler.rs  macros.rs  main.rs  state.rs  utils.rs
src/commands/: cmd.rs  mod.rs
src/commands/downloader/: play.rs  reels.rs  spotify.rs
src/commands/general/: info.rs  menu.rs  ping.rs
src/commands/group/: add.rs  demote.rs  group.rs  kick.rs  mute.rs  promote.rs
src/commands/root/: cache.rs  exec.rs  set.rs  spamedit.rs
src/commands/testing/: button.rs
src/commands/tools/: rvo.rs
src/macros/: send_video.rs
