[package]
name = "sora-on-rust"
edition = "2024"
version = "0.2.0"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = "0.4.44"
dotenvy = "0.15.7"
env_logger = "0.11.10"
linkme = "0.3.35"
log = "0.4.29"
mimalloc = "0.1.48"
sled = "0.34.7"
sysinfo = "0.38.4"
toml = "1.1.2"
wacore = "0.5"
waproto = "0.5"
whatsapp-rust-tokio-transport = "0.5"
whatsapp-rust-ureq-http-client = "0.5"

[dependencies.dashmap]
version = "6.1.0"
features = ["serde"]

[dependencies.rand]
version = "0.10.1"
features = ["std"]

[dependencies.reqwest]
version = "0.13.2"
features = ["json"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.tokio]
version = "1.51"
features = ["macros", "rt-multi-thread", "fs", "process"]

[dependencies.whatsapp-rust]
version = "0.5"
features = ["signal", "sqlite-storage", "tokio-native", "tokio-runtime", "simd", "moka-cache", "ureq-client"]
default-features = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package]
